添加CSS以及images、js 文件夹
Signed-off-by: Glow <admin@glowface.net>

--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE HTML>
 <html lang="en-US">
 <head>
-	<meta charset="UTF-8">
-	<title>Glowin的个人主页</title>
+<meta charset="UTF-8">
+<meta name="keywords" content="web前端，页面重构">
+<link rel="stylesheet" rev="stylesheet" href="css/main.css" type="text/css" media="screen" />
+<title>Glowin的个人主页</title>
 </head>
 <body>
 	<h1>这里是Glowin的个人页面！</h1>
